# mlx-playground

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
gpt/: README.py  convert.py  hf_model.py
llama/: model.py  optim.py
mlxllama/: model.py  optim.py
phi2/: convert.py  model.py  phi2_outputs.txt
