[tool.poetry]
name = "mlx-playground"
version = "0.1.0"
description = ""
authors = ["Joe Barrow <joseph.d.barrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlx = "0.0.5"
sentencepiece = "^0.1.99"
tqdm = "^4.66.1"
einops = "^0.7.0"
torch = "2.1.1"


[tool.poetry.group.dev.dependencies]
transformers = "^4.35.2"
torch = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
